--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">Smith</a>
-
+      <a href="#" class="logo">Yusen. </a>
+s
       <nav class="navbar" data-navbar>
         <ul class="navbar-list">
 
@@ -106,9 +106,9 @@
 
           <div class="hero-content">
 
-            <p class="section-subtitle">Bernard Smith</p>
+            <p class="section-subtitle">Yusen Liu</p>
 
-            <h1 class="h1 hero-title">Creative Designer Based In UK</h1>
+            <h1 class="h1 hero-title">Embeded System Software Engineer </h1>
 
             <ul class="hero-list">
 
